# bevy-playground

./: Cargo.toml  build.rs
server/: Cargo.toml
server/src/: lib.rs
src/: audio.rs  camera.rs  characters.rs  collision.rs  combat.rs  config.rs  enemy.rs  inventory.rs  main.rs  network.rs  particles.rs  player.rs  save.rs  state.rs
src/assets/shaders/: particle_glow.wgsl
src/audio/: assets.rs  music.rs  sfx.rs
src/camera/: camera.rs
src/characters/: animation.rs  collider.rs  config.rs  facing.rs  input.rs  movement.rs  physics.rs  rendering.rs  spawn.rs  state.rs
src/collision/: debug.rs  map.rs  systems.rs  tile_type.rs
src/combat/: events.rs  health.rs  healthbar.rs  observers.rs  player_combat.rs  power_type.rs  systems.rs
src/enemy/: ai.rs  combat.rs  components.rs  spawn.rs
src/inventory/: inventory.rs  systems.rs
src/map/: assets.rs  generate.rs  models.rs  rules.rs  sockets.rs  tilemap.rs
src/module_bindings/: mod.rs  player_type.rs
src/network/: connection.rs
src/particles/: components.rs  material.rs  systems.rs
src/save/: data.rs  systems.rs  ui.rs
src/state/: ending.rs  game_over.rs  game_state.rs  loading.rs  main_menu.rs  pause.rs  victory.rs
