[package]
name = "bevy-playground"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"


[dependencies]
bevy = { version = "0.18.0", features = ["dynamic_linking", "mp3", "wav"] }
bevy_common_assets = { version = "0.16.0", features = ["ron"] }
bevy_procedural_tilemaps = "0.3.0"
bincode = "1.3.0"
chrono = { version = "0.4.44", features = ["serde"] }
pathfinding = "4.15.0"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
spacetimedb-sdk = "2.2.0"
